# make-my-resume-fit

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  THIRD_PARTY_CONTENT.md  make_my_resume_fit.py  pyproject.toml  resume-fitter.md
.cyclestone/: DECISIONS.md  settings.yml
schemas/: changes.schema.json  metadata.schema.json
tests/: test_make_my_resume_fit.py
